create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1781,6 +1781,9 @@ body {
 .cid-rnwQt1yPwQ .dropdown-item:hover {
   color: #767676 !important;
 }
+.cid-rnDI6TsUPV {
+  background-image: url("../../../assets/images/animated-gif-downsized-large-11.gif");
+}
 .cid-rnA8DCaQYS {
   padding-top: 0px;
   padding-bottom: 30px;
