--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1,7 +1,18 @@
-/*!
+.engine {
+	position: absolute;
+	text-indent: -2400px;
+	text-align: center;
+	padding: 0;
+	top: 0;
+	left: -2400px;
+}/*!
  * Mobirise v4 theme (https://mobirise.com/)
  * Copyright 2017 Mobirise
  */
+div, span, h1, h2, h3, h4, h5, h6, p, blockquote, a, ol, ul, li,
+figcaption, textarea, input, .display-1, .display-2 {
+  font: inherit; }
+
 section {
   background-color: #eeeeee; }
 
@@ -32,7 +43,7 @@ body {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6,
-.display-1, .display-2, .display-3, .display-4 {
+.display-1, .display-2, .display-3 {
   line-height: 1;
   word-break: break-word;
   word-wrap: break-word; }
@@ -47,7 +58,10 @@ blockquote {
   border-color: #ff3366; }
 
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
+  -webkit-transition-delay: 9999s;
   transition-delay: 9999s;
+  -webkit-transition-property: background-color, color;
+  -o-transition-property: background-color, color;
   transition-property: background-color, color; }
 
 textarea[type="hidden"] {
@@ -115,69 +129,68 @@ section {
 
 /*! Media  */
 .media-size-item {
-  -webkit-flex: 1 1 auto;
   -moz-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   -o-flex: 1 1 auto;
+  -webkit-box-flex: 1;
   flex: 1 1 auto; }
 
 .media-content {
-  -webkit-flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
   flex-basis: 100%; }
 
 .media-container-row {
   display: -ms-flexbox;
-  display: -webkit-flex;
+  display: -webkit-box;
   display: flex;
-  -webkit-flex-direction: row;
   -ms-flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
   flex-direction: row;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
+  -webkit-box-pack: center;
   justify-content: center;
-  -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
-  -webkit-align-items: start;
   -ms-flex-align: start;
+  -webkit-box-align: start;
   align-items: start; }
   .media-container-row .media-size-item {
     width: 400px; }
 
 .media-container-column {
   display: -ms-flexbox;
-  display: -webkit-flex;
+  display: -webkit-box;
   display: flex;
-  -webkit-flex-direction: column;
   -ms-flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
   flex-direction: column;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
+  -webkit-box-pack: center;
   justify-content: center;
-  -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
-  -webkit-align-items: stretch;
   -ms-flex-align: stretch;
+  -webkit-box-align: stretch;
   align-items: stretch; }
   .media-container-column > * {
     width: 100%; }
 
 @media (min-width: 992px) {
   .media-container-row {
-    -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap; } }
 figure {
   overflow: hidden; }
 
 figure[mbr-media-size] {
+  -webkit-transition: width 0.1s;
+  -o-transition: width 0.1s;
   transition: width 0.1s; }
 
 .mbr-figure img, .mbr-figure iframe {
@@ -188,8 +201,15 @@ figure[mbr-media-size] {
   background-color: transparent;
   border: none; }
 
+.card-wrapper {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  -webkit-flex: 1; }
+
 .card-img {
   text-align: center;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   -webkit-flex-shrink: 0; }
 
@@ -253,11 +273,14 @@ nav .mbr-section-btn {
   min-height: 100vh; }
 
 .mbr-fullscreen {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   -webkit-align-items: center;
   min-height: 100vh;
@@ -288,6 +311,7 @@ nav .mbr-section-btn {
   z-index: 5000;
   color: #ffffff;
   font-size: 32px;
+  -ms-transform: rotate(180deg);
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg); }
 
@@ -301,6 +325,8 @@ nav .mbr-section-btn {
   outline-style: none !important;
   position: relative;
   text-decoration: none;
+  -webkit-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
   cursor: pointer;
   text-align: center; }
@@ -324,6 +350,7 @@ nav .mbr-section-btn {
   top: 6px;
   left: -4px;
   -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
   transform: rotate(-90deg); }
 
 /*! Arrow Down */
@@ -337,6 +364,7 @@ nav .mbr-section-btn {
   background-color: rgba(80, 80, 80, 0.5);
   border-radius: 50%;
   -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%); }
   .mbr-arrow > a {
     display: inline-block;
@@ -374,22 +402,35 @@ nav .mbr-section-btn {
   .mbr-arrow-up {
     left: 50%;
     right: auto;
+    -ms-transform: translateX(-50%) rotate(180deg);
     transform: translateX(-50%) rotate(180deg);
     -webkit-transform: translateX(-50%) rotate(180deg); } }
-/*Gradients animation*/
+/*Gradients animation
+
+use with:
+
+background: linear-gradient(0deg, #2e3192, #1bffff);
+background-size: 200% 200%;
+animation: gradient-animation 4s infinite alternate;
+-webkit-animation: gradient-animation 4s infinite alternate;
+    */
 @keyframes gradient-animation {
   from {
     background-position: 0% 100%;
+    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out; }
   to {
     background-position: 100% 0%;
+    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out; } }
 @-webkit-keyframes gradient-animation {
   from {
     background-position: 0% 100%;
+    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out; }
   to {
     background-position: 100% 0%;
+    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out; } }
 .bg-gradient {
   background-size: 200% 200%;
@@ -399,27 +440,35 @@ nav .mbr-section-btn {
 .menu .navbar-brand {
   display: -webkit-flex; }
   .menu .navbar-brand span {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     display: -webkit-flex; }
   .menu .navbar-brand .navbar-caption-wrap {
     display: -webkit-flex; }
   .menu .navbar-brand .navbar-logo img {
     display: -webkit-flex; }
+@media (max-width: 991px) {
+  .menu .navbar-collapse {
+    max-height: 93.5vh; }
+    .menu .navbar-collapse.show {
+      overflow: auto; } }
+@media (max-width: 767px) {
+  .menu .navbar-collapse {
+    max-height: 60vh; } }
 @media (min-width: 768px) and (max-width: 991px) {
   .menu .navbar-toggleable-sm .navbar-nav {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox; } }
 @media (min-width: 992px) {
   .menu .navbar-nav.nav-dropdown {
     display: -webkit-flex; }
   .menu .navbar-toggleable-sm .navbar-collapse {
     display: -webkit-flex !important; } }
-@media (max-width: 767px) {
-  .menu .navbar-collapse {
-    max-height: 80vh; }
-  .menu .dropdown-menu {
-    max-height: 60vh; } }
+.menu .collapsed .navbar-collapse {
+  max-height: 93.5vh; }
+  .menu .collapsed .navbar-collapse.show {
+    overflow: auto; }
 
 .navbar {
   display: -webkit-flex;
@@ -436,10 +485,6 @@ nav .mbr-section-btn {
   padding: .667em 1.667em !important;
   margin: 0 !important; }
 
-.nav {
-  display: -webkit-flex;
-  -webkit-flex-wrap: wrap; }
-
 .row {
   display: -webkit-flex;
   -webkit-flex-wrap: wrap; }
@@ -447,26 +492,23 @@ nav .mbr-section-btn {
 .justify-content-center {
   -webkit-justify-content: center; }
 
-.form-inline {
-  display: -webkit-flex;
-  -webkit-flex-flow: row wrap;
-  -webkit-align-items: center; }
-
-.card-wrapper {
-  -webkit-flex: 1; }
-
 .carousel-control {
-  z-index: 10;
   display: -webkit-flex;
   -webkit-align-items: center;
   -webkit-justify-content: center; }
 
-.carousel-controls {
-  display: -webkit-flex; }
+.form-inline {
+  display: -webkit-flex;
+  -webkit-align-items: center; }
 
-.media {
-  display: -webkit-flex; }
-
+@media (max-width: 576px) {
+  .col-xs-3 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding-left: 0;
+    padding-right: 0; } }
 .jq-selectbox__select {
   padding: 1.07em .5em;
   position: absolute;
@@ -487,11 +529,3 @@ nav .mbr-section-btn {
   padding: 1.07em .5em; }
 
 /*# sourceMappingURL=style.css.map */
-.engine {
-	position: absolute;
-	text-indent: -2400px;
-	text-align: center;
-	padding: 0;
-	top: 0;
-	left: -2400px;
-}
