--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -172,7 +172,7 @@ body {
   background-color: #fac769 !important;
 }
 .bg-danger {
-  background-color: #b2ccd2 !important;
+  background-color: #232323 !important;
 }
 .btn-primary,
 .btn-primary:active,
@@ -277,22 +277,22 @@ body {
 .btn-danger,
 .btn-danger:active,
 .btn-danger.active {
-  background-color: #b2ccd2 !important;
-  border-color: #b2ccd2 !important;
+  background-color: #232323 !important;
+  border-color: #232323 !important;
   color: #ffffff !important;
 }
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger.focus {
   color: #ffffff !important;
-  background-color: #82acb6 !important;
-  border-color: #82acb6 !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #82acb6 !important;
-  border-color: #82acb6 !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-black,
 .btn-black:active,
@@ -452,21 +452,21 @@ body {
 .btn-danger-outline:active,
 .btn-danger-outline.active {
   background: none;
-  border-color: #72a1ac;
-  color: #72a1ac !important;
+  border-color: #000000;
+  color: #000000 !important;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus {
   color: #ffffff !important;
-  background-color: #b2ccd2;
-  border-color: #b2ccd2;
+  background-color: #232323;
+  border-color: #232323;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #b2ccd2 !important;
-  border-color: #b2ccd2 !important;
+  background-color: #232323 !important;
+  border-color: #232323 !important;
 }
 .btn-black-outline,
 .btn-black-outline:active,
@@ -518,7 +518,7 @@ body {
   color: #fac769 !important;
 }
 .text-danger {
-  color: #b2ccd2 !important;
+  color: #232323 !important;
 }
 .text-white {
   color: #ffffff !important;
@@ -548,7 +548,7 @@ a.text-warning:focus {
 }
 a.text-danger:hover,
 a.text-danger:focus {
-  color: #72a1ac !important;
+  color: #000000 !important;
 }
 a.text-white:hover,
 a.text-white:focus {
@@ -568,7 +568,7 @@ a.text-black:focus {
   background-color: #fac769;
 }
 .alert-danger {
-  background-color: #b2ccd2;
+  background-color: #232323;
 }
 .mbr-section-btn a.btn:not(.btn-form) {
   border-radius: 100px;
@@ -622,7 +622,7 @@ a:hover {
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #d5d5d5;
 }
 /* Scroll to top button*/
 .scrollToTop_wraper {
@@ -1313,7 +1313,7 @@ body {
   }
 }
 .cid-rnEFnYPv4X {
-  padding-top: 60px;
+  padding-top: 15px;
   padding-bottom: 30px;
   background-color: #fac769;
 }
@@ -1425,8 +1425,101 @@ body {
     padding-bottom: 2rem;
   }
 }
+.cid-rnEtEFiYYu {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #fac769;
+}
+.cid-rnEtEFiYYu .main {
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+.cid-rnEtEFiYYu .row-element,
+.cid-rnEtEFiYYu .image-element {
+  padding: 0;
+}
+.cid-rnEtEFiYYu .image-element {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rnEtEFiYYu .image-element img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+.cid-rnEtEFiYYu .text-content {
+  padding: 3rem;
+}
+@media (max-width: 767px) {
+  .cid-rnEtEFiYYu .text-content {
+    padding: 2rem 1rem;
+  }
+  .cid-rnEtEFiYYu .mbr-title,
+  .cid-rnEtEFiYYu .underline,
+  .cid-rnEtEFiYYu .mbr-text,
+  .cid-rnEtEFiYYu .mbr-section-btn {
+    text-align: center !important;
+  }
+}
+.cid-rnEtEFiYYu .mbr-section-subtitle B {
+  color: #000000;
+}
+.cid-rnEtEFiYYu .mbr-title {
+  color: #ffffff;
+}
+.cid-rnEtEFiYYu .mbr-text,
+.cid-rnEtEFiYYu .mbr-section-btn {
+  color: #000000;
+}
+.cid-rnEtEFiYYu .mbr-text,
+.cid-rnEtEFiYYu .mbr-section-btn B {
+  color: #000000;
+}
+.cid-rnEy25CRi9 {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #fac769;
+}
+.cid-rnEy25CRi9 .row-element,
+.cid-rnEy25CRi9 .image-element {
+  padding: 0;
+}
+.cid-rnEy25CRi9 .image-element {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rnEy25CRi9 .image-element img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+.cid-rnEy25CRi9 .text-content {
+  padding: 3rem;
+}
+@media (max-width: 767px) {
+  .cid-rnEy25CRi9 .text-content {
+    padding: 2rem 1rem;
+  }
+  .cid-rnEy25CRi9 .mbr-title,
+  .cid-rnEy25CRi9 .underline,
+  .cid-rnEy25CRi9 .mbr-text,
+  .cid-rnEy25CRi9 .mbr-section-btn {
+    text-align: center !important;
+  }
+}
+.cid-rnEy25CRi9 .mbr-title {
+  color: #ffffff;
+}
+.cid-rnEy25CRi9 .mbr-text,
+.cid-rnEy25CRi9 .mbr-section-btn {
+  color: #000000;
+}
 .cid-rnEn8L8aFh {
-  padding-top: 75px;
+  padding-top: 0px;
   padding-bottom: 15px;
   background-color: #fac769;
 }
@@ -1466,119 +1559,6 @@ body {
 }
 .cid-rnEn8L8aFh .mbr-card-text {
   margin: 0;
-}
-.cid-rnEtEFiYYu {
-  padding-top: 60px;
-  padding-bottom: 30px;
-  background-color: #fac769;
-}
-.cid-rnEtEFiYYu .main {
-  -webkit-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-}
-.cid-rnEtEFiYYu .row-element,
-.cid-rnEtEFiYYu .image-element {
-  padding: 0;
-}
-.cid-rnEtEFiYYu .image-element {
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-rnEtEFiYYu .image-element img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center center;
-}
-.cid-rnEtEFiYYu .text-content {
-  padding: 3rem;
-}
-@media (max-width: 767px) {
-  .cid-rnEtEFiYYu .text-content {
-    padding: 2rem 1rem;
-  }
-  .cid-rnEtEFiYYu .mbr-title,
-  .cid-rnEtEFiYYu .underline,
-  .cid-rnEtEFiYYu .mbr-text,
-  .cid-rnEtEFiYYu .mbr-section-btn {
-    text-align: center !important;
-  }
-}
-.cid-rnEy25CRi9 {
-  padding-top: 0px;
-  padding-bottom: 75px;
-  background-color: #fac769;
-}
-.cid-rnEy25CRi9 .row-element,
-.cid-rnEy25CRi9 .image-element {
-  padding: 0;
-}
-.cid-rnEy25CRi9 .image-element {
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-rnEy25CRi9 .image-element img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center center;
-}
-.cid-rnEy25CRi9 .text-content {
-  padding: 3rem;
-}
-@media (max-width: 767px) {
-  .cid-rnEy25CRi9 .text-content {
-    padding: 2rem 1rem;
-  }
-  .cid-rnEy25CRi9 .mbr-title,
-  .cid-rnEy25CRi9 .underline,
-  .cid-rnEy25CRi9 .mbr-text,
-  .cid-rnEy25CRi9 .mbr-section-btn {
-    text-align: center !important;
-  }
-}
-.cid-rnF5eAvJU8 {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background: #000000;
-}
-.cid-rnF5eAvJU8 .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rnF5eAvJU8 .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #eddab7;
-  margin-left: .5rem;
-  margin-right: .5rem;
-}
-.cid-rnF5eAvJU8 .mbr-iconfont-social:before {
-  padding: .6rem;
-  border: 1px solid;
-  border-radius: 100px;
-  transition: all .3s;
-}
-.cid-rnF5eAvJU8 .mbr-iconfont-social:hover {
-  color: #000000;
-}
-.cid-rnF5eAvJU8 .mbr-iconfont-social:hover:before {
-  background: #eddab7;
-  transition: all .3s;
-  border-color: transparent;
-}
-.cid-rnF5eAvJU8 .social-list a:focus {
-  text-decoration: none;
-}
-@media (max-width: 767px) {
-  .cid-rnF5eAvJU8 .mbr-iconfont-social {
-    margin-left: .2rem;
-    margin-right: .2rem;
-  }
-}
-.cid-rnF5eAvJU8 .mbr-section-title,
-.cid-rnF5eAvJU8 .social-list {
-  color: #ffffff;
 }
 .cid-rnEzYRuIZK {
   padding-top: 45px;
@@ -1621,113 +1601,68 @@ body {
 .cid-rnEzYRuIZK H3 {
   color: #ffffff;
 }
-.cid-rnExk4edcp {
-  padding-top: 45px;
-  padding-bottom: 45px;
+.cid-ro1ybeeS3n {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #fac769;
 }
-@media (max-width: 767px) {
-  .cid-rnExk4edcp .content {
-    text-align: center;
-  }
-  .cid-rnExk4edcp .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-.cid-rnExk4edcp .img-logo img {
-  height: 6rem;
-}
-.cid-rnExk4edcp .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
+.cid-ro1ybeeS3n .social-media {
   display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  padding-right: 4rem;
+}
+.cid-ro1ybeeS3n .social-media ul {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 8px;
+}
+.cid-ro1ybeeS3n .social-media ul li {
+  padding: 4px;
+  display: inline-block;
+}
+.cid-ro1ybeeS3n .logo-section {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
+  padding-left: 4rem;
 }
-.cid-rnExk4edcp .social-list .mbr-iconfont-social {
-  font-size: 1rem;
-  color: #fff;
+.cid-ro1ybeeS3n .icon-transition span {
+  color: #ffffff;
+  display: block;
+  padding: 0.1rem 0.8rem;
+  height: 3em;
+  line-height: 3em;
+  border-radius: 50%;
+  background-color: #000000;
+  width: 3em;
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  font-size: 13px;
 }
-.cid-rnExk4edcp .social-list .mbr-iconfont:before {
-  padding: .5rem;
-  border: 1px solid;
-  border-radius: 100px;
+.cid-ro1ybeeS3n .icon-transition span:hover {
+  background-color: #e9a933;
 }
-.cid-rnExk4edcp .social-list .soc-item {
-  margin: 0 3px 15px 3px;
-}
-.cid-rnExk4edcp .social-list a {
-  margin: 0;
-  opacity: .7;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-rnExk4edcp .social-list a:hover {
-  opacity: 1;
-}
-.cid-rnExk4edcp .form-control {
-  min-height: auto;
-  color: #000000 !important;
-  border: none;
-  width: 100%;
-  border-radius: 0 !important;
-  background-color: transparent;
-  padding: .5rem 0rem;
-  border-bottom: 1px solid #000000;
-}
-.cid-rnExk4edcp .form-control:focus {
-  outline: none;
-  box-shadow: none;
-}
-.cid-rnExk4edcp input::-webkit-input-placeholder {
+.cid-ro1ybeeS3n .mbr-text {
   color: #000000;
 }
-.cid-rnExk4edcp input::-moz-placeholder {
-  color: #000000;
-}
-.cid-rnExk4edcp textarea::-webkit-input-placeholder {
-  color: #000000;
-}
-.cid-rnExk4edcp textarea::-moz-placeholder {
-  color: #000000;
-}
-.cid-rnExk4edcp .list {
-  list-style-type: none;
-  padding: 0;
-}
-.cid-rnExk4edcp .list li {
-  padding-bottom: .5rem;
-}
-.cid-rnExk4edcp .list li:last-child {
-  padding-bottom: 0;
-}
-.cid-rnExk4edcp .mbr-footer-list,
-.cid-rnExk4edcp .form-text {
-  color: #cccccc;
-}
-@media (max-width: 767px) {
-  .cid-rnExk4edcp .mbr-footer-list,
-  .cid-rnExk4edcp .form-text,
-  .cid-rnExk4edcp .footer-title,
-  .cid-rnExk4edcp .footer-main-title,
-  .cid-rnExk4edcp .form-text,
-  .cid-rnExk4edcp .list {
-    text-align: center !important;
+@media (max-width: 991px) {
+  .cid-ro1ybeeS3n .social-media {
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding-right: 0rem;
   }
-  .cid-rnExk4edcp .mbr-form,
-  .cid-rnExk4edcp .social-list {
-    -webkit-justify-content: center !important;
-    justify-content: center !important;
+  .cid-ro1ybeeS3n .logo-section {
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding-left: 0rem;
+    margin-bottom: 1.5rem;
   }
-}
-.cid-rnExk4edcp .footer-main-title {
-  color: #232323;
-}
-.cid-rnExk4edcp .footer-title {
-  color: #000000;
-}
-.cid-rnExk4edcp .mbr-footer-list UL {
-  color: #000000;
+  .cid-ro1ybeeS3n .mbr-text {
+    margin-bottom: 1.5rem;
+  }
 }
