--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1087,7 +1087,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #fac769;
 }
 .cid-rnEg7RGVqX button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
