create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1000,7 +1000,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rnEZnHNLj6 {
-  background-image: url("../../../assets/images/ezgif.com-gif-maker-6.gif");
+  background-image: url("../../../assets/images/frame-5-3-1080x637.png");
 }
 .cid-rnEZnHNLj6 .mbr-section-subtitle {
   color: #ff0000;
@@ -1133,6 +1133,9 @@ section.lazy-placeholder:after {
     -webkit-transform: scale(1.2);
     -webkit-opacity: 0;
   }
+}
+.cid-rnEZnHNLj6 .mbr-section-title {
+  color: #ffffff;
 }
 .cid-rnEFnYPv4X {
   padding-top: 15px;
