create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1248,6 +1248,7 @@ section.lazy-placeholder:after {
 }
 .cid-rnEiU47OHp .mbr-section-subtitle {
   color: #efefef;
+  text-align: left;
 }
 @media (min-width: 992px) {
   .cid-rnEiU47OHp .img-block {
